--- a/Makefile.config
+++ b/Makefile.config
@@ -8,8 +8,13 @@ else
 endif
 
 CPPFLAGS += -Wall
+LDLIBS += -lsupc++ -lgcc_eh -lpthread
 
-ifndef COMSPEC
+ifeq "$(OS)" "Windows_NT"
+    EXE = .exe
+    LDFLAGS += -Lc:\mingw\x32-4.8.0-posix-dwarf-rev2\mingw32\i686-w64-mingw32\lib
+    LDLIBS += -lcrypt32
+else
     CPPFLAGS += -I/opt/cprocsp/include
     CPPFLAGS += -I/opt/cprocsp/include/cpcsp
     CPPFLAGS += -I/opt/cprocsp/include/asn1c/rtsrc
@@ -28,7 +33,5 @@ ifndef COMSPEC
     LDFLAGS += -L/opt/cprocsp/lib/$(ARCH)
 
     EXE = 
-else
-    EXE = .exe
 endif
 
