--- a/ocaml/Makefile
+++ b/ocaml/Makefile
@@ -1,11 +1,9 @@
 include ../Makefile.config
 
 SOURCES = csp_stubs.cpp.c
-
 MLSOURCES = 
 
 OBJECTS = $(SOURCES:.c=.o)
-
 MLOBJECTS = $(MLSOURCES:.ml=.cmx)
 
 MLCFLAGS = $(foreach flg, $(CPPFLAGS), -ccopt $(flg))
@@ -14,18 +12,23 @@ MLCFLAGS += -ccopt -I../cpp/include
 MLLDFLAGS = $(foreach flg, $(LDFLAGS), -ccopt $(flg))
 MLLDLIBS = $(foreach flg, $(LDLIBS), -cclib $(flg))
 
-MLCLIBS = ../cpp/csp.a
+MLLDFLAGS += -ccopt -L../cpp
+MLLDLIBS += -cclib -lcsp
 
-TARGET = csp.cmxa
+TARGET = ocamlcsp.cmxa
 
 all: $(TARGET)
-	ocamlopt $(TARGET) test.ml  $(MLLDLIBS) $(MLLDFLAGS) -o test
+	ocamlopt $(TARGET) test.ml -o test$(EXE)
 
 clean::
-	rm -f $(MLOBJECTS) $(OBJECTS) $(TARGET)
+	rm -f $(MLOBJECTS) $(OBJECTS) $(TARGET) $(CLIBTARGET)
 
-$(TARGET): $(OBJECTS) $(MLOBJECTS)
-	ocamlopt -a -o $@ $^ $(MLCLIBS) -cclib -lstdc++ $(MLLDLIBS) $(MLLDFLAGS) 
+$(TARGET): $(MLOBJECTS) $(OBJECTS)
+	ocamlopt -a -o $@ $(MLOBJECTS) $(MLLDLIBS) $(MLLDFLAGS) 
+	$(AR) r $(@:.cmxa=.a) $(OBJECTS)
+
+$(CLIBTARGET): $(OBJECTS)
+	$(AR) r $@ $^
 
 %.o: %.c
 	ocamlopt -ccopt -xc++ $(MLCFLAGS) -c $<
