--- a/Makefile.config
+++ b/Makefile.config
@@ -1,5 +1,5 @@
-ARCH = ia32
-#ARCH = 'amd64'
+#ARCH = ia32
+ARCH = 'amd64'
 
 ifeq "$(ARCH)" "ia32"
 	SIZE_VOID = 4
@@ -7,7 +7,7 @@ else
 	SIZE_VOID = 8
 endif
 
-CPPFLAGS += -Wall
+CPPFLAGS += -Wall -fPIC
 LDLIBS += -lsupc++ -lgcc_eh -lpthread
 
 ifeq "$(OS)" "Windows_NT"
