немного автоматизировал перекомпиляцию

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,12 +1,3 @@
-ARCH = ia32
-#ARCH = 'amd64'
-
-ifeq "$(ARCH)" "ia32"
-	SIZE_VOID = 4
-else
-	SIZE_VOID = 8
-endif
-
 CPPFLAGS += -Wall -fPIC
 LDLIBS += -lsupc++ -lgcc_eh -lpthread
 
@@ -15,6 +6,15 @@ ifeq "$(OS)" "Windows_NT"
     LDFLAGS += -Lc:\mingw\x32-4.8.0-posix-dwarf-rev2\mingw32\i686-w64-mingw32\lib
     LDLIBS += -lcrypt32
 else
+    PROCESSOR = $(shell uname -p | grep 64 )
+    ifeq ($(strip $(PROCESSOR)),)
+        ARCH = 'ia32'
+        SIZE_VOID = 4
+    else
+        ARCH = 'amd64'
+        SIZE_VOID = 8
+    endif
+
     CPPFLAGS += -I/opt/cprocsp/include
     CPPFLAGS += -I/opt/cprocsp/include/cpcsp
     CPPFLAGS += -I/opt/cprocsp/include/asn1c/rtsrc
@@ -34,4 +34,3 @@ else
 
     EXE = 
 endif
-
